# oxidns-next

./: .env.example  AGENTS.md  Cargo.toml  FEATURE_AUDIT.md  PLUGIN_DEV.md  README.md  README_EN.md  RELEASE_NOTES.md  SECURITY.md  config.minimal.yaml  config.yaml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: custom-build.yml  docker.yml  packaging-ci.yml  release.yml  rust-ci.yml  security-audit.yml  storage-ci.yml
ai/: release-process.md  webui.md
benches/: domain_rule_matcher.rs  ip_rule_matcher.rs  message_codec.rs  plugin_local_answers.rs
benchmarks/mosdns_compare/: README.md  run_dnsperf_compare.sh  run_dnsperf_latency_compare.sh  scenarios.tsv
crates/macros/: Cargo.toml  README.md
crates/macros/src/: lib.rs
crates/proto/: Cargo.toml  README.md
crates/proto/src/: types.rs
crates/proto/src/rdata/: basic.rs  service.rs
crates/ripset/: Cargo.toml  README.md
crates/ripset/examples/: issue127_repro.rs
crates/ripset/src/: ipset.rs  lib.rs  nftset.rs
crates/ripset/tests/: integration.rs
crates/ripset/tests/harness/: mod.rs
crates/zoneparser/: Cargo.toml  README.md
crates/zoneparser/src/: parser.rs
docs/: docusaurus.config.js  package-lock.json  package.json  plugin-api-roadmap.md
docs/docs/: api.md  api.mdx  architecture-and-design.md  benchmarks.md  cli.md  configuration.md  custom-build.mdx  dns-codes.md  intro.mdx  migrate-from-mosdns.mdx  mikrotik-policy-routing.md  openwrt.mdx  quickstart.mdx  releases.md  roadmap.md  scenarios.md  webui.md
docs/scripts/: sync-installers.mjs
examples/storage/: README.md  mysql.compose.yaml  mysql.config.yaml  mysql.env.example  postgres.compose.yaml  postgres.config.yaml  postgres.env.example  redis.compose.yaml  redis.config.yaml  redis.env.example
packaging/: oxidns-next.service
packaging/debian/: postinst
packaging/docker/: Dockerfile.runtime
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: app.rs  lib.rs  main.rs  service.rs
src/api/: auth.rs  auth_store.rs  cors.rs  hub.rs  mod.rs  request.rs  server.rs  tests.rs  upgrade.rs
src/app/: banner.rs  bootstrap.rs  cli.rs
src/cli/: export_dat.rs  mod.rs  probe.rs  upgrade.rs
src/config/: env_expand.rs  mod.rs  types.rs
src/infra/: clock.rs  env.rs  error.rs  mod.rs  service.rs  upgrade.rs
src/plugin/: mod.rs  registry.rs
tests/: feature_gating.rs  plugin_integration.rs
webui/: package.json  pnpm-lock.yaml
webui/app/: globals.css  layout.tsx
webui/components/: theme-provider.tsx
(+155 files in other folders)
