[package]
name = "oxidns-next-zoneparser"
version = "0.1.1"
edition = "2024"
authors = ["Sven Shi <isvenshi@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Vendored zonefile parser adapted for OxiDNS Next"
repository = "https://github.com/ciallothu/oxidns-next"
keywords = ["dns", "zonefile", "parser"]
categories = ["parser-implementations", "network-programming"]

[dependencies]
oxidns-next-proto = { version = "0.1", path = "../proto" }
thiserror = "2.0"

[lib]
name = "oxidns_next_zoneparser"
path = "src/lib.rs"
doctest = false
